# ChangeLog for sci-libs/clfft
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Apr 2015; Marius Brehler <marbre@linux.sungazer.de>
  files/clfft-client_CMakeLists.patch,
  files/clfft-scripts_perf_CMakeLists.patch:
  Replace patches by upstream patches

  19 Feb 2015; Marius Brehler <marbre@linux.sungazer.de> clfft-9999.ebuild:
  Fix SLOT operators

*clfft-2.4 (18 Feb 2015)

  18 Feb 2015; Marius Brehler <marbre@linux.sungazer.de> +clfft-2.4.ebuild:
  Version Bump

*clfft-2.2 (06 Feb 2015)
*clfft-9999 (06 Feb 2015)

  06 Feb 2015; Marius Brehler <marbre@linux.sungazer.de> +clfft-2.2.ebuild,
  +clfft-9999.ebuild, +files/clfft-client_CMakeLists.patch,
  +files/clfft-scripts_perf_CMakeLists.patch, +metadata.xml:
  sci-libs/clfft: Inital commit