@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*clfft-0.9999 (11 May 2015)
+
+  11 May 2015; Marius Brehler <marbre@linux.sungazer.de> +clfft-0.9999.ebuild,
+  clfft-9999.ebuild:
+  clfft-9999 points to develop branch
+
   04 Apr 2015; Marius Brehler <marbre@linux.sungazer.de>
   files/clfft-client_CMakeLists.patch,
   files/clfft-scripts_perf_CMakeLists.patch:
